assets/style.scss
---
# Only the main Sass file needs front matter (the dashes are enough)
---

@import "minima";

// ============================================================================
// Common to all sites
// ============================================================================

h1, h2, h3, h4, h5, h6 {
    font-weight: 450;
}

h1, h2, h3, h4, h5, h6, p, blockquote, pre, ul, ol, dl, figure {
    margin-bottom: 12px;
}

h1, .post-title {
    font-size: 32px;
}

h2, .post-content h2, .post-list-heading {
    font-size: 26px;
}

h3, .post-content h3, .post-link {
    font-size: 20px;
}

.site-header {
    border-top: 0px;
    border-bottom: 2px solid #e8e8e8;
}

.pagination {
    padding-top: 20px;
    padding-bottom: 20px;
    border-top: 2px solid #e8e8e8;
}

.post-link {
    margin-bottom: -10px;
}

.youtube-container {
    position: relative;
    padding-top: 56.25%;
}

.youtube-player {
    width: 100%;
    height: 100%;
    left:0;
    top:0;
    position: absolute;
}

table th, table td {
    padding: 5px;
}

table tr:nth-child(even) {
    background-color: inherit;
}

.invisible-table {
    width: auto;
    border: none;
}

.invisible-table td {
    padding-left: 0px;
    padding-right: 15px;
    padding-top: 0px;
    padding-bottom: 5px;
    border: none;
}

